Add a small shade between the toolbar and the right side panel

--- a/.settings
+++ b/.settings
@@ -2,7 +2,7 @@
 Global=[110]
 
 [Breakpoints]
-Breakpoint[1]="FMain.8425"
+Breakpoint[1]="FMain.8427"
 Count=1
 
 [DebugWindow]
@@ -750,6 +750,9 @@ Geometry=[1294,14,382,665]
 [DebugWindow/brother.Proxy]
 Geometry=[803,146,382,665]
 
+[DebugWindow/brother.Rows]
+Geometry=[783,227,382,665]
+
 [DebugWindow/brother.proxy]
 Geometry=[1628,198,499,471]
 
@@ -1298,11 +1301,11 @@ File[2]=".src/Form/zzzFake.form"
 Active=3
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:680.16"
-File[5]=".src/Form/FMain.class:856.54"
+File[5]=".src/Form/FMain.class:817.5"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
 File[8]=".src/0_Moduli/Global.module:119.3"
-File[9]="CHANGELOG_GIT:3.10"
+File[9]="CHANGELOG_GIT:5.10"
 File[10]=".src/Classi/MplayerClass.class:308.17"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
