--- a/.settings
+++ b/.settings
@@ -2,7 +2,7 @@
 Global=[110]
 
 [Breakpoints]
-Breakpoint[1]="FMain.8427"
+Breakpoint[1]="FMain.8446"
 Count=1
 
 [DebugWindow]
@@ -765,6 +765,9 @@ Geometry=[-4,-3,210,210]
 [DebugWindow/buttonopen]
 Geometry=[1280,0,248,458]
 
+[DebugWindow/cachebar]
+Geometry=[713,494,470,633]
+
 [DebugWindow/channels]
 Geometry=[0,0,854,756]
 
@@ -1301,11 +1304,11 @@ File[2]=".src/Form/zzzFake.form"
 Active=3
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:680.16"
-File[5]=".src/Form/FMain.class:817.5"
+File[5]=".src/Form/FMain.class:5384.26"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
 File[8]=".src/0_Moduli/Global.module:119.3"
-File[9]="CHANGELOG_GIT:5.10"
+File[9]="CHANGELOG_GIT:3.10"
 File[10]=".src/Classi/MplayerClass.class:308.17"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
