--- a/.settings
+++ b/.settings
@@ -2,8 +2,7 @@
 Global=[110]
 
 [Breakpoints]
-Breakpoint[1]="FMain.8535"
-Count=1
+Count=0
 
 [DebugWindow]
 Count=0
@@ -1321,9 +1320,8 @@ File[4]=".src/Form/EpgForm.class:680.16"
 File[5]=".src/Form/FsForm.form"
 File[6]=".src/Form/FsForm.class:0.0"
 File[7]=".src/0_Moduli/Global.module:119.3"
-Active=8
-File[8]="CHANGELOG_GIT:29.46"
-File[9]=".src/Classi/MplayerClass.class:308.17"
+File[8]="CHANGELOG_GIT:23.0"
+File[9]=".src/Classi/MplayerClass.class:387.16"
 File[10]=".src/Form/Chains.form"
 File[11]=".src/Form/MyQuestion.form"
 File[12]=".src/Classi/PlaylistClass.class:1318.3"
@@ -1333,12 +1331,12 @@ File[15]=".src/Form/AudioForm.class:135.30"
 File[16]=".src/Classi/DynaGuiClass.class:142.14"
 File[17]=".src/Form/CoverManager.class:67.17"
 File[18]=".src/Form/GeneralOptions.class:1096.0"
-File[19]=".src/Classi/Meters.class:52.3"
+File[19]=".src/Classi/Meters.class:204.3"
 Fold[19]=[55,92]
 File[20]="AA_ToDo:638.0"
 File[21]=".src/Form/EpgForm.form"
 File[22]=".src/Form/GeneralOptions.form"
-File[23]=".src/Classi/YoutubeClass.class:353.19"
+File[23]=".src/Classi/YoutubeClass.class:468.33"
 File[24]="xt7-player.desktop:13.0"
 File[25]=".src/Classi/StartClass.class:18.1"
 File[26]=".src/Form/zzzFake.class:111.33"
@@ -1367,11 +1365,14 @@ File[48]=".src/Form/XConfigureVideoDriver.form"
 File[49]=".src/Form/VideoEqualizer.form"
 File[50]=".src/Form/DVBTuner.form"
 File[51]=".src/Classi/DynaGuiClassBAK.class:111.12"
-File[52]=".src/Form/FMain.class:4726.12"
+Active=52
+File[52]=".src/Form/FMain.class:888.21"
 File[53]=".src/Form/MyAskName.form"
 File[54]=".src/Form/MyAskName.class:17.39"
-File[55]=".src/Form/OverlayTip.form"
-Count=55
+File[55]="roundmask.png"
+File[56]=".src/Form/OverlayTrayTip.form"
+File[57]=".src/Form/Searchfields.form"
+Count=57
 
 [Watches]
 Count=4
