On seekbar drag, do a seek only when using left mouse button - Bigger live previews

--- a/.settings
+++ b/.settings
@@ -1,7 +1,5 @@
 [Bookmarks]
 Global=[110]
-MplayerClass=[]
-FMain=[]
 
 [Breakpoints]
 Count=0
@@ -1342,9 +1340,8 @@ File[4]=".src/Form/EpgForm.class:680.16"
 File[5]=".src/Form/FsForm.form"
 File[6]=".src/Form/FsForm.class:0.0"
 File[7]=".src/0_Moduli/Global.module:103.11"
-Active=8
-File[8]="CHANGELOG_GIT:5.10"
-File[9]=".src/Classi/MplayerClass.class:287.20"
+File[8]="CHANGELOG_GIT:4.32"
+File[9]=".src/Classi/MplayerClass.class:888.10"
 File[10]=".src/Form/Chains.form"
 File[11]=".src/Form/MyQuestion.form"
 File[12]=".src/Classi/PlaylistClass.class:1069.0"
@@ -1356,7 +1353,7 @@ File[17]=".src/Form/CoverManager.class:1235.24"
 File[18]=".src/Form/GeneralOptions.class:68.2"
 File[19]=".src/Classi/Meters.class:204.3"
 Fold[19]=[55,92]
-File[20]="AA_ToDo:638.0"
+File[20]="AA_ToDo:42.536"
 File[21]=".src/Form/EpgForm.form"
 File[22]=".src/Form/GeneralOptions.form"
 File[23]=".src/Classi/YoutubeClass.class:507.0"
@@ -1388,14 +1385,17 @@ File[48]=".src/Form/XConfigureVideoDriver.form"
 File[49]=".src/Form/VideoEqualizer.form"
 File[50]=".src/Form/DVBTuner.form"
 File[51]=".src/Classi/DynaGuiClassBAK.class:111.12"
-File[52]=".src/Form/FMain.class:10508.10"
+File[52]=".src/Form/FMain.class:4617.12"
 File[53]=".src/Form/MyAskName.form"
 File[54]=".src/Form/MyAskName.class:17.39"
 File[55]="roundmask.png"
 File[56]=".src/Form/OverlayTrayTip.form"
 File[57]=".src/Form/Searchfields.form"
 File[58]=".src/0_Moduli/ComboHistory.module:0.0"
-Count=58
+File[59]=".src/Form/SubAndOsd.class:242.116"
+Active=60
+File[60]="shadelowEPG.png"
+Count=60
 
 [Watches]
 Count=4
