--- a/.settings
+++ b/.settings
@@ -5,7 +5,8 @@ Global=[110]
 Count=0
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="TheContainer"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -592,6 +593,9 @@ Geometry=[0,0,210,210]
 
 [DebugWindow/TheComboBox]
 Geometry=[0,0,301,301]
+
+[DebugWindow/TheContainer]
+Geometry=[1511,132,576,699]
 
 [DebugWindow/TheForm]
 Geometry=[691,104,506,663]
@@ -1339,9 +1343,9 @@ File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:680.16"
 File[5]=".src/Form/FsForm.form"
 File[6]=".src/Form/FsForm.class:0.0"
-File[7]=".src/0_Moduli/Global.module:103.11"
-File[8]="CHANGELOG_GIT:106.33"
-File[9]=".src/Classi/MplayerClass.class:310.0"
+File[7]=".src/0_Moduli/Global.module:834.14"
+File[8]="CHANGELOG_GIT:5.10"
+File[9]=".src/Classi/MplayerClass.class:318.3"
 File[10]=".src/Form/Chains.form"
 File[11]=".src/Form/MyQuestion.form"
 File[12]=".src/Classi/PlaylistClass.class:1069.0"
@@ -1351,7 +1355,7 @@ File[15]=".src/Form/AudioForm.class:135.30"
 File[16]=".src/Classi/DynaGuiClass.class:142.14"
 File[17]=".src/Form/CoverManager.class:1235.24"
 File[18]=".src/Form/GeneralOptions.class:68.2"
-File[19]=".src/Classi/Meters.class:204.3"
+File[19]=".src/Classi/Meters.class:60.17"
 Fold[19]=[55,92]
 File[20]="AA_ToDo:42.536"
 File[21]=".src/Form/EpgForm.form"
@@ -1381,12 +1385,12 @@ File[44]=".src/Form/LogWindow.form"
 File[45]=".src/Form/LogWindow.class:90.0"
 File[46]=".src/Classi/PodCast.class:175.0"
 File[47]=".src/Form/XConfigureAudioDriver.form"
+Active=48
 File[48]=".src/Form/XConfigureVideoDriver.form"
 File[49]=".src/Form/VideoEqualizer.form"
 File[50]=".src/Form/DVBTuner.form"
 File[51]=".src/Classi/DynaGuiClassBAK.class:111.12"
-Active=52
-File[52]=".src/Form/FMain.class:5241.3"
+File[52]=".src/Form/FMain.class:4105.45"
 File[53]=".src/Form/MyAskName.form"
 File[54]=".src/Form/MyAskName.class:17.39"
 File[55]="roundmask.png"
@@ -1395,7 +1399,9 @@ File[57]=".src/Form/Searchfields.form"
 File[58]=".src/0_Moduli/ComboHistory.module:0.0"
 File[59]=".src/Form/SubAndOsd.class:242.116"
 File[60]="shadelowEPG.png"
-Count=60
+File[61]=".src/Form/XConfigureVideoDriver.class:101.69"
+File[62]=".src/Form/XConfigureAudioDriver.class:0.0"
+Count=62
 
 [Watches]
 Count=4
