"-noconfig-all" -> "--noconfig-all"

--- a/.settings
+++ b/.settings
@@ -866,7 +866,7 @@ Geometry=[1280,0,486,587]
 Geometry=[2005,179,481,686]
 
 [DebugWindow/fileview1.Selection]
-Geometry=[1280,-3,1280,976]
+Geometry=[150,188,853,637]
 
 [DebugWindow/findouts]
 Geometry=[0,0,344,344]
@@ -1342,9 +1342,10 @@ File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:680.16"
 File[5]=".src/Form/FsForm.form"
 File[6]=".src/Form/FsForm.class:0.0"
-File[7]=".src/0_Moduli/Global.module:834.14"
-File[8]="CHANGELOG_GIT:6.10"
-File[9]=".src/Classi/MplayerClass.class:44.0"
+File[7]=".src/0_Moduli/Global.module:876.14"
+Active=8
+File[8]="CHANGELOG_GIT:19.71"
+File[9]=".src/Classi/MplayerClass.class:966.0"
 File[10]=".src/Form/Chains.form"
 File[11]=".src/Form/MyQuestion.form"
 File[12]=".src/Classi/PlaylistClass.class:1069.0"
@@ -1354,18 +1355,17 @@ File[15]=".src/Form/AudioForm.class:135.30"
 File[16]=".src/Classi/DynaGuiClass.class:142.14"
 File[17]=".src/Form/CoverManager.class:1235.24"
 File[18]=".src/Form/GeneralOptions.class:321.19"
-File[19]=".src/Classi/Meters.class:60.17"
+File[19]=".src/Classi/Meters.class:106.0"
 Fold[19]=[55,92]
 File[20]="AA_ToDo:42.536"
 File[21]=".src/Form/EpgForm.form"
-Active=22
 File[22]=".src/Form/GeneralOptions.form"
 File[23]=".src/Classi/YoutubeClass.class:507.0"
 File[24]="xt7-player.desktop:13.0"
 File[25]=".src/Classi/StartClass.class:19.1"
 File[26]=".src/Form/zzzFake.class:111.33"
 File[27]=".src/Classi/TagLib.class:71.15"
-File[28]=".src/Form/HotKeyGrab.class:147.7"
+File[28]=".src/Form/HotKeyGrab.class:129.0"
 File[29]=".src/Form/HotKeyGrab.form"
 File[30]=".src/Form/Chains.class:76.0"
 File[31]=".src/Form/VFiltersCfg.class:470.0"
@@ -1389,7 +1389,7 @@ File[48]=".src/Form/XConfigureVideoDriver.form"
 File[49]=".src/Form/VideoEqualizer.form"
 File[50]=".src/Form/DVBTuner.form"
 File[51]=".src/Classi/DynaGuiClassBAK.class:111.12"
-File[52]=".src/Form/FMain.class:4110.6"
+File[52]=".src/Form/FMain.class:803.0"
 File[53]=".src/Form/MyAskName.form"
 File[54]=".src/Form/MyAskName.class:17.39"
 File[55]="roundmask.png"
