--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Bookmarks]
-Global=[110]
+Global=[]
 
 [Breakpoints]
 Count=0
@@ -1348,92 +1348,15 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="caching.gif"
-File[2]=".src/Form/zzzFake.form"
+File[1]=".src/0_Moduli/Global.module:418.17"
+Fold[1]=[183,189,197,227,239,248,256,259,262,266,281,293,305,317,329,337,347,370,378,433,448,463,499,543,585,601,607,637,864,875,884,888,903,913,919,935,945,958,969,980,991,1002]
+File[2]=".src/Classi/StartClass.class:31.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/EpgForm.class:576.19"
-File[5]=".src/Form/FsForm.form"
-File[6]=".src/Form/FsForm.class:0.0"
-File[7]=".src/0_Moduli/Global.module:876.14"
-File[8]="CHANGELOG_GIT:7.10"
-File[9]=".src/Classi/MplayerClass.class:316.0"
-File[10]=".src/Form/Chains.form"
-File[11]=".src/Form/MyQuestion.form"
-File[12]=".src/Classi/PlaylistClass.class:1069.0"
-File[13]=".src/Form/HotKeys.class:171.38"
-File[14]=".src/Form/AudioForm.form"
-File[15]=".src/Form/AudioForm.class:135.30"
-File[16]=".src/Classi/DynaGuiClass.class:142.14"
-File[17]=".src/Form/CoverManager.class:322.43"
-File[18]=".src/Form/GeneralOptions.class:321.19"
-File[19]=".src/Classi/Meters.class:106.0"
-Fold[19]=[55,92]
-File[20]="AA_ToDo:42.536"
-File[21]=".src/Form/EpgForm.form"
-File[22]=".src/Form/GeneralOptions.form"
-File[23]=".src/Classi/YoutubeClass.class:232.0"
-File[24]="xt7-player.desktop:13.0"
-File[25]=".src/Classi/StartClass.class:19.1"
-File[26]=".src/Form/zzzFake.class:111.33"
-File[27]=".src/Classi/TagLib.class:71.15"
-File[28]=".src/Form/HotKeyGrab.class:129.0"
-File[29]=".src/Form/HotKeyGrab.form"
-File[30]=".src/Form/Chains.class:291.15"
-File[31]=".src/Form/VFiltersCfg.class:470.0"
-File[32]=".src/Classi/SettingsClass.class:15.0"
-File[33]=".src/Form/AFiltersCfg.class:382.15"
-File[34]="MoreResults.png"
-File[35]=".src/Classi/AlbumView.class:328.8"
-File[36]=".src/Form/ProfileManager.class:14.37"
-File[37]=".src/Form/TranslationNeeded.class:11.20"
-File[38]=".src/Form/ProfileManager.form"
-File[39]="meterpt.png"
-File[40]=".src/Form/AddUriForm.class:45.29"
-File[41]=".src/Form/DVBTuner.class:48.17"
-File[42]="emptycover.png"
-File[43]=".src/Classi/OpenSubtitlesAPI.class:12.30"
-File[44]=".src/Form/LogWindow.form"
-File[45]=".src/Form/LogWindow.class:90.0"
-File[46]=".src/Classi/PodCast.class:175.0"
-File[47]=".src/Form/XConfigureAudioDriver.form"
-File[48]=".src/Form/XConfigureVideoDriver.form"
-File[49]=".src/Form/VideoEqualizer.form"
-File[50]=".src/Form/DVBTuner.form"
-File[51]=".src/Classi/DynaGuiClassBAK.class:111.12"
-File[52]=".src/Form/FMain.class:4139.2"
-File[53]=".src/Form/MyAskName.form"
-File[54]=".src/Form/MyAskName.class:17.39"
-File[55]="roundmask.png"
-File[56]=".src/Form/OverlayTrayTip.form"
-File[57]=".src/Form/Searchfields.form"
-File[58]=".src/0_Moduli/ComboHistory.module:0.0"
-File[59]=".src/Form/SubAndOsd.class:242.116"
-File[60]="shadelowEPG.png"
-File[61]=".src/Form/XConfigureVideoDriver.class:105.0"
-File[62]=".src/Form/XConfigureAudioDriver.class:0.0"
-File[63]=".src/Form/VFiltersCfg.form"
-File[64]=".src/Form/TranslationNeeded.form"
-File[65]=".src/Form/TextDialog.form"
-File[66]=".src/Form/SubAndOsd.form"
-File[67]=".src/Form/ServiceForm.form"
-File[68]=".src/Form/RealtimeForm.form"
-File[69]=".src/Form/OpenSubtitesForm.form"
-File[70]=".src/Form/HotKeys.form"
-File[71]=".src/Form/CoverManager.form"
-File[72]=".src/Form/CountDown.form"
-File[73]=".src/Form/ButtonMenu.form"
-File[74]=".src/Form/AudioVideoCodecs.form"
-File[75]=".src/Form/AskName.form"
-File[76]=".src/Form/AllOptions.form"
-File[77]=".src/Form/AFiltersCfg.form"
-File[78]=".src/Form/AddUriForm.form"
-File[79]=".src/Form/MyQuestion.class:63.8"
-File[80]=".src/Classi/FlashClass.class:19.15"
-File[81]=".src/Form/AskName.class:18.12"
-File[82]=".src/Form/AudioVideoCodecs.class:71.15"
-Active=83
-File[83]=".src/Classi/ShoutCastClass.class:54.87"
-Count=83
+File[4]=".src/Form/FMain.class:4303.24"
+Active=5
+File[5]=".src/Classi/SettingsClass.class:279.26"
+File[6]="CHANGELOG_GIT:16.47"
+Count=6
 
 [Watches]
 Count=4
