--- a/.settings
+++ b/.settings
@@ -1,6 +1,3 @@
-[Bookmarks]
-Global=[]
-
 [Breakpoints]
 Count=0
 
@@ -63,6 +60,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/Chains.controls]
 Geometry=[0,0,301,301]
+
+[DebugWindow/ChangedForms]
+Geometry=[47,-3,210,210]
 
 [DebugWindow/ChannelNode]
 Geometry=[0,0,344,344]
@@ -455,6 +455,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Rootnode.Children[t].Attributes]
 Geometry=[0,0,344,344]
 
+[DebugWindow/SavedForms]
+Geometry=[47,-3,210,210]
+
 [DebugWindow/Scan(AllOptions, "*-lavdopts *")]
 Geometry=[0,41,344,344]
 
@@ -625,6 +628,9 @@ Geometry=[0,41,344,344]
 
 [DebugWindow/TheTabstrip]
 Geometry=[0,0,301,301]
+
+[DebugWindow/Theform]
+Geometry=[47,-3,653,651]
 
 [DebugWindow/TheobJect]
 Geometry=[0,0,344,344]
@@ -897,6 +903,9 @@ Geometry=[1280,0,497,854]
 
 [DebugWindow/global]
 Geometry=[1280,0,580,802]
+
+[DebugWindow/global.SavedForms]
+Geometry=[204,393,210,210]
 
 [DebugWindow/historyarray]
 Geometry=[52,0,758,210]
@@ -1348,15 +1357,26 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:418.17"
-Fold[1]=[183,189,197,227,239,248,256,259,262,266,281,293,305,317,329,337,347,370,378,433,448,463,499,543,585,601,607,637,864,875,884,888,903,913,919,935,945,958,969,980,991,1002]
+File[1]=".src/0_Moduli/Global.module:388.0"
+Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001,1012]
 File[2]=".src/Classi/StartClass.class:31.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4303.24"
-Active=5
-File[5]=".src/Classi/SettingsClass.class:279.26"
-File[6]="CHANGELOG_GIT:16.47"
-Count=6
+File[4]=".src/Form/FMain.class:10618.21"
+File[5]=".src/Classi/SettingsClass.class:518.0"
+Active=6
+File[6]="CHANGELOG_GIT:23.11"
+File[7]=".src/Classi/ShoutCastClass.class:0.0"
+File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
+File[9]=".src/Classi/PlaylistClass.class:400.8"
+File[10]=".src/Form/EpgForm.form"
+File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
+File[12]=".src/Form/AllOptions.form"
+File[13]=".src/Form/DVBTuner.form"
+File[14]=".src/Form/OpenSubtitesForm.form"
+File[15]=".src/Form/RealtimeForm.form"
+File[16]=".src/Form/Searchfields.form"
+File[17]=".src/Classi/MplayerClass.class:1455.14"
+Count=17
 
 [Watches]
 Count=4
