--- a/.settings
+++ b/.settings
@@ -1366,11 +1366,11 @@ SearchString=True
 File[1]=".src/0_Moduli/Global.module:120.25"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001,1012]
 File[2]=".src/Classi/StartClass.class:31.0"
-Active=3
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:7425.24"
+Active=4
+File[4]=".src/Form/FMain.class:10640.120"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-File[6]="CHANGELOG_GIT:14.16"
+File[6]="CHANGELOG_GIT:4.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:400.8"
@@ -1384,7 +1384,9 @@ File[16]=".src/Form/Searchfields.form"
 File[17]=".src/Classi/MplayerClass.class:1455.14"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
-Count=19
+File[20]=".src/Form/GeneralOptions.form"
+File[21]=".src/Form/GeneralOptions.class:750.38"
+Count=21
 
 [Watches]
 Count=4
