--- a/.settings
+++ b/.settings
@@ -2,7 +2,8 @@
 Count=0
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="Screens"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -521,6 +522,9 @@ Geometry=[962,20,210,899]
 [DebugWindow/Split(file.Load(filename), "\n", "", TRUE)]
 Geometry=[1482,250,344,344]
 
+[DebugWindow/Split(file.Load(uncoveredfile), "\n", "", True)]
+Geometry=[47,-3,623,765]
+
 [DebugWindow/Split(filters, "|", "", True)]
 Geometry=[51,0,210,210]
 
@@ -656,6 +660,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/Triples]
 Geometry=[0,0,1187,344]
+
+[DebugWindow/Uncovered]
+Geometry=[-42,640,954,398]
 
 [DebugWindow/UrlAndFormats]
 Geometry=[48,660,922,335]
@@ -901,6 +908,9 @@ Geometry=[-4,-4,561,728]
 [DebugWindow/fmain.Controls["Button1"]]
 Geometry=[0,0,344,344]
 
+[DebugWindow/fsform]
+Geometry=[49,-4,210,210]
+
 [DebugWindow/fsorted]
 Geometry=[856,570,339,451]
 
@@ -912,6 +922,9 @@ Geometry=[1280,0,580,802]
 
 [DebugWindow/global.SavedForms]
 Geometry=[204,393,210,210]
+
+[DebugWindow/gridpriv]
+Geometry=[47,-3,210,210]
 
 [DebugWindow/historyarray]
 Geometry=[52,0,758,210]
@@ -1363,14 +1376,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:120.25"
+File[1]=".src/0_Moduli/Global.module:413.0"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001,1012]
-File[2]=".src/Classi/StartClass.class:31.0"
+File[2]=".src/Classi/StartClass.class:2.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1303.36"
+File[4]=".src/Form/FMain.class:3824.6"
 File[5]=".src/Classi/SettingsClass.class:424.0"
 Active=6
-File[6]="CHANGELOG_GIT:17.69"
+File[6]="CHANGELOG_GIT:7.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:400.8"
@@ -1381,12 +1394,16 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:1078.0"
+File[17]=".src/Classi/MplayerClass.class:1533.15"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:750.38"
-Count=21
+File[22]=".src/Form/CoverManager.class:1258.2"
+File[23]=".src/Form/EpgForm.class:604.24"
+File[24]=".src/Classi/AlbumView.class:252.31"
+File[25]=".src/Form/CoverManager.form"
+Count=25
 
 [Watches]
 Count=4
