--- a/.settings
+++ b/.settings
@@ -1379,10 +1379,10 @@ File[1]=".src/0_Moduli/Global.module:413.0"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001,1012]
 File[2]=".src/Classi/StartClass.class:2.0"
 File[3]=".src/Form/FMain.form"
-Active=4
-File[4]=".src/Form/FMain.class:1267.19"
+File[4]=".src/Form/FMain.class:1328.135"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-File[6]="CHANGELOG_GIT:62.0"
+Active=6
+File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:400.8"
@@ -1402,7 +1402,9 @@ File[22]=".src/Form/CoverManager.class:1258.2"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
 File[25]=".src/Form/CoverManager.form"
-Count=25
+File[26]=".src/Form/AudioForm.form"
+File[27]=".src/Form/AudioForm.class:15.3"
+Count=27
 
 [Watches]
 Count=4
