--- a/.settings
+++ b/.settings
@@ -332,6 +332,9 @@ Geometry=[304,489,761,765]
 [DebugWindow/Menu]
 Geometry=[0,0,301,301]
 
+[DebugWindow/MenuItemsUpdate]
+Geometry=[47,-3,210,210]
+
 [DebugWindow/MyGrid]
 Geometry=[51,41,344,344]
 
@@ -1375,17 +1378,17 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:413.0"
-Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001,1012]
+File[1]=".src/0_Moduli/Global.module:1020.0"
+Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
 File[2]=".src/Classi/StartClass.class:2.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1328.135"
+File[4]=".src/Form/FMain.class:10641.15"
 File[5]=".src/Classi/SettingsClass.class:424.0"
 Active=6
 File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
-File[9]=".src/Classi/PlaylistClass.class:400.8"
+File[9]=".src/Classi/PlaylistClass.class:743.3"
 File[10]=".src/Form/EpgForm.form"
 File[11]=".src/Form/XConfigureAudioDriver.class:15.25"
 File[12]=".src/Form/AllOptions.form"
@@ -1393,18 +1396,19 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:1533.15"
+File[17]=".src/Classi/MplayerClass.class:1497.15"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:750.38"
-File[22]=".src/Form/CoverManager.class:1258.2"
+File[22]=".src/Form/CoverManager.class:1241.51"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
 File[25]=".src/Form/CoverManager.form"
 File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:15.3"
-Count=27
+File[28]=".src/Form/FsForm.form"
+Count=28
 
 [Watches]
 Count=4
