--- a/.settings
+++ b/.settings
@@ -305,6 +305,9 @@ Geometry=[52,0,267,712]
 [DebugWindow/Last.Parent.Children]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/Last.selection]
+Geometry=[47,-3,210,210]
+
 [DebugWindow/LastObj]
 Geometry=[-4,-3,210,210]
 
@@ -1382,10 +1385,10 @@ File[1]=".src/0_Moduli/Global.module:1020.0"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
 File[2]=".src/Classi/StartClass.class:2.0"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:10641.15"
+Active=4
+File[4]=".src/Form/FMain.class:10683.0"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-Active=6
-File[6]="CHANGELOG_GIT:3.10"
+File[6]="CHANGELOG_GIT:10.57"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:743.3"
