--- a/.settings
+++ b/.settings
@@ -901,6 +901,9 @@ Geometry=[2005,179,481,686]
 [DebugWindow/fileview1.Selection]
 Geometry=[150,188,853,637]
 
+[DebugWindow/fileview1.selection]
+Geometry=[47,-3,210,210]
+
 [DebugWindow/findouts]
 Geometry=[0,0,344,344]
 
@@ -1383,12 +1386,12 @@ SearchString=True
 [OpenFile]
 File[1]=".src/0_Moduli/Global.module:1020.0"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
-File[2]=".src/Classi/StartClass.class:2.0"
+File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4717.24"
+File[4]=".src/Form/FMain.class:4822.0"
 File[5]=".src/Classi/SettingsClass.class:424.0"
 Active=6
-File[6]="CHANGELOG_GIT:3.10"
+File[6]="CHANGELOG_GIT:26.0"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:743.3"
@@ -1411,7 +1414,8 @@ File[25]=".src/Form/CoverManager.form"
 File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:15.3"
 File[28]=".src/Form/FsForm.form"
-Count=28
+File[29]=".src/Form/zzzFake.class:50.22"
+Count=29
 
 [Watches]
 Count=4
