--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 Title=xt7-player
 Startup=StartClass
 Icon=xt7-player.png
-Version=3.4.1
+Version=3.4.2
 Component=gb.image
 Component=gb.qt4
 Component=gb.form
@@ -21,7 +21,6 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
-Arguments="/mnt/nas.crypt/Musica/Jovanotti-Ora.(Deluxe.Version).(by.@G@-AsTrA).2011[torrented]/CD1/01-Megamix.mp3"
 TabSize=2
 Translate=1
 Language=en
@@ -33,10 +32,24 @@ Maintainer=Antonio Orefice
 Address=xt7player@gmail.com
 Url=http://xt7-player.sourceforge.net/
 License=General Public Licence
-PackageName=xt7-player-3.4.1
+PackageName=xt7-player-3.4.2
 CreateEachDirectory=1
 MimeTypes="audio/mp3","audio/mpeg3","audio/mpeg4","audio/mpg","audio/mpeg","audio/mpegurl","audio/m3u","audio/mp4","audio/wav","video/msvideo","video/mpeg4","video/mpeg","video/x-m4v","video/x-mpeg","video/x-mpeg2","video/mp4","video/x-msmpeg","video/vnd.mpegurl","video/x-mpegurl","video/x-msvideo","video/quicktime","video/x-qtc","audio/x-ms-asf","audio/x-ms-asx","audio/x-ms-wma","audio/x-ms-wax","audio/x-ms-wmp","audio/x-ms-wmv","video/x-ms-asf","video/x-ms-asf-plugin","video/x-ms-asx","video/x-ms-wax","video/x-ms-wmp","video/x-ms-wmv","video/x-ms-wma","video/x-ms-wvx","video/x-ms-wmx","video/x-ms-wm","application/asx","application/x-ms-asf","application/vnd.ms-asf","application/x-ms-wmd","application/x-ms-wmz","audio/scpls","audio/x-scpls","audio/x-pls","audio/vnd.mpegurl","audio/x-mpg","audio/x-mpeg","audio/x-mpeg3","audio/x-mpegurl","audio/x-realaudio","audio/x-pn-realaudio","audio/x-pn-realaudio-plugin","application/x-pn-realaudio","audio/vnd.rn-realaudio","video/x-realvideo","video/x-pn-realvideo","video/vnd.rn-realvideo","video/x-pn-realvideo-plugin","application/vnd.rn-realmedia","application/vnd.rn-realmedia-vbr","application/vnd.rn-realplayer","application/sdp","application/smil","application/x-smil","application/streamingmedia","application/x-streamingmedia","video/nsv","audio/x-mp3","video/x-ogm","video/x-theora","audio/vorbis","audio/x-vorbis","audio/x-oggflac","application/x-ogg","application/ogg","audio/mp1","audio/x-mp1","audio/mp2","audio/x-mp2","audio/x-wav","video/avi","video/x-avi","video/x-divx","video/x-fli","video/x-matroska","audio/x-matroska","application/x-mplayer2","application/x-cda","audio/aac","audio/ac3","audio/basic","audio/m4a","audio/x-aac","audio/x-adpcm","audio/x-flac","audio/x-m3u","audio/x-m4a","audio/x-musepack","audio/x-pn-windows-pcm","video/x-3gpp","video/x-3gpp2","video/mediaplayer","uri/mms","uri/mmst","uri/mmsu","uri/pnm","uri/rtsp","uri/rtspt","uri/rtspu"
 Packager=1
-Systems=autotools
-SameDependencies=1
+Systems=autotools,debian,fedora,suse,slackware,ubuntu
 SameFiles=1
+Menus=debian:"Applications/Video"
+Categories=debian:"Video"
+Groups=debian:"video"
+Menus=fedora:"Audio Video/Video/Player"
+Categories=fedora:"AudioVideo;Player;Video"
+Groups=fedora:"Applications/Multimedia"
+Menus=slackware:"Audio Video/Video/Player"
+Categories=slackware:"AudioVideo;Player;Video"
+Groups=slackware:"Applications/Multimedia"
+Menus=suse:"Audio Video/Video/Player"
+Categories=suse:"AudioVideo;Player;Video"
+Groups=suse:"Productivity/Multimedia/Video/Players"
+Menus=ubuntu:"Applications/Video"
+Categories=ubuntu:"Video"
+Groups=ubuntu:"video"
