--- a/.settings
+++ b/.settings
@@ -428,6 +428,9 @@ Geometry=[700,269,292,618]
 [DebugWindow/Picture]
 Geometry=[51,0,210,210]
 
+[DebugWindow/Picture["media-loop-off.png"]]
+Geometry=[1280,-3,210,210]
+
 [DebugWindow/PlayListGrid[PlayListGrid.row, myplaylist.ColumnIndex["Filename"]]]
 Geometry=[51,0,210,210]
 
@@ -1235,6 +1238,12 @@ Geometry=[1280,0,210,210]
 [DebugWindow/shadeup]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/shadeup.Parent]
+Geometry=[2009,363,210,210]
+
+[DebugWindow/shadeup.Parent.Children]
+Geometry=[1771,159,210,210]
+
 [DebugWindow/shadowpic]
 Geometry=[51,0,210,210]
 
@@ -1388,10 +1397,10 @@ File[1]=".src/0_Moduli/Global.module:1020.0"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4822.0"
+Active=4
+File[4]=".src/Form/FMain.class:2798.23"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-Active=6
-File[6]="CHANGELOG_GIT:26.0"
+File[6]="CHANGELOG_GIT:14.5"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:743.3"
@@ -1402,7 +1411,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:890.15"
+File[17]=".src/Classi/MplayerClass.class:192.20"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1415,7 +1424,8 @@ File[26]=".src/Form/AudioForm.form"
 File[27]=".src/Form/AudioForm.class:15.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:50.22"
-Count=29
+File[30]=".src/Classi/Meters.class:0.0"
+Count=30
 
 [Watches]
 Count=4
