--- a/.settings
+++ b/.settings
@@ -1400,10 +1400,9 @@ File[1]=".src/0_Moduli/Global.module:84.45"
 Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-Active=4
-File[4]=".src/Form/FMain.class:10793.29"
+File[4]=".src/Form/FMain.class:3170.11"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-File[6]="CHANGELOG_GIT:4.6"
+File[6]="CHANGELOG_GIT:33.48"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:743.3"
@@ -1428,7 +1427,9 @@ File[27]=".src/Form/AudioForm.class:15.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:0.0"
-Count=30
+Active=31
+File[31]="xt7-player.desktop:12.20"
+Count=31
 
 [Watches]
 Count=4
