New Helper window to compile ladspa audio plugin parameters.

--- a/.settings
+++ b/.settings
@@ -720,6 +720,9 @@ Geometry=[0,41,344,344]
 [DebugWindow/[ColumnIndex.count]]
 Geometry=[0,0,301,301]
 
+[DebugWindow/abutton]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/achild]
 Geometry=[485,99,526,656]
 
@@ -936,6 +939,15 @@ Geometry=[204,393,210,210]
 
 [DebugWindow/gridpriv]
 Geometry=[47,-3,210,210]
+
+[DebugWindow/helper]
+Geometry=[1280,-3,210,210]
+
+[DebugWindow/helper.parent]
+Geometry=[1280,0,415,909]
+
+[DebugWindow/helper.window]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/historyarray]
 Geometry=[52,0,758,210]
@@ -1396,13 +1408,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:84.45"
-Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,647,874,885,894,898,913,923,929,945,955,968,979,990,1001]
+File[1]=".src/0_Moduli/Global.module:864.20"
+Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,887,898,907,911,926,936,942,958,968,981,992,1003,1014]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:3170.11"
+Active=4
+File[4]=".src/Form/FMain.class:3417.13"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-File[6]="CHANGELOG_GIT:33.48"
+File[6]="CHANGELOG_GIT:5.0"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:743.3"
@@ -1427,9 +1440,16 @@ File[27]=".src/Form/AudioForm.class:15.3"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:0.0"
-Active=31
 File[31]="xt7-player.desktop:12.20"
-Count=31
+File[32]=".src/Form/MyQuestion.class:65.68"
+File[33]=".src/Form/MyQuestion.form"
+File[34]=".src/Form/ladspahelper.form"
+File[35]=".src/Form/AFiltersCfg.form"
+File[36]=".src/Form/AFiltersCfg.class:331.27"
+File[37]=".src/Form/ladspahelper.class:185.28"
+File[38]=".src/Form/LogWindow.class:0.0"
+File[39]=".src/Form/Chains.form"
+Count=39
 
 [Watches]
 Count=4
