Lyrics finder via duckduckgo (click on the microphone icon when a music is playing).

--- a/.settings
+++ b/.settings
@@ -1456,14 +1456,13 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:673.19"
-Fold[1]=[191,197,205,235,247,256,264,267,270,274,289,301,313,325,337,345,355,378,443,458,473,509,553,595,611,617,887,898,907,911,926,936,942,958,968,981,992,1003,1014]
+File[1]=".src/0_Moduli/Global.module:659.2"
+Fold[1]=[174,193,199,207,237,249,258,266,269,272,276,291,303,315,337,349,367,434,455,470,485,521,565,607,659,899,910,923,938,954,980,993,1004]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4010.96"
+File[4]=".src/Form/FMain.class:2956.15"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-Active=6
-File[6]="CHANGELOG_GIT:6.103"
+File[6]="CHANGELOG_GIT:6.93"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:559.3"
@@ -1478,13 +1477,14 @@ File[17]=".src/Classi/MplayerClass.class:318.9"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
-File[21]=".src/Form/GeneralOptions.class:385.13"
-File[22]=".src/Form/CoverManager.class:1241.51"
+File[21]=".src/Form/GeneralOptions.class:735.37"
+Active=22
+File[22]=".src/Form/CoverManager.class:271.3"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
 File[25]=".src/Form/CoverManager.form"
 File[26]=".src/Form/AudioForm.form"
-File[27]=".src/Form/AudioForm.class:15.3"
+File[27]=".src/Form/AudioForm.class:146.77"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:0.0"
@@ -1499,7 +1499,7 @@ File[38]=".src/Form/LogWindow.class:0.0"
 File[39]=".src/Form/Chains.form"
 File[40]=".src/Classi/mpris.class:131.20"
 File[41]=".src/Form/Chains.class:258.37"
-File[42]=".src/0_Moduli/MyDialog.class:55.0"
+File[42]=".src/0_Moduli/MyDialog.class:31.18"
 File[43]=".src/Form/ButtonMenu.form"
 File[44]=".src/Classi/FloatSpinBox.class:166.30"
 File[45]=".src/Form/SubAndOsd.class:62.0"
@@ -1507,7 +1507,10 @@ File[46]=".src/Form/OverlayTrayTip.class:18.0"
 File[47]=".src/Form/OpenSubtitesForm.class:93.0"
 File[48]=".src/Form/HotKeys.form"
 File[49]=".src/Form/HotKeys.class:233.57"
-Count=49
+File[50]=".src/Form/FormLyrics.form"
+File[51]=".src/Form/FormLyrics.class:13.3"
+File[52]=".src/Classi/WgetClass.class:4.0"
+Count=52
 
 [Watches]
 Count=15
