--- a/.project
+++ b/.project
@@ -16,6 +16,7 @@ Component=gb.form.mdi
 Component=gb.net
 Component=gb.net.curl
 Component=gb.qt4.ext
+Component=gb.qt4.webkit
 Component=gb.signal
 Component=gb.web
 Component=gb.xml
