Use http_proxy (or https_proxy) environment variable and drop http_proxy option.

--- a/.project
+++ b/.project
@@ -22,6 +22,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
+Environment="http_proxy=http://proxy.unina.it:3128"
 TabSize=2
 Translate=1
 Language=en
