--- a/.settings
+++ b/.settings
@@ -2,8 +2,7 @@
 Count=0
 
 [DebugWindow]
-Count=1
-DebugWindow[1]="resultlines"
+Count=0
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -1276,7 +1275,7 @@ Geometry=[0,0,301,301]
 Geometry=[255,559,672,590]
 
 [DebugWindow/resultlines]
-Geometry=[2074,411,959,679]
+Geometry=[1321,263,959,679]
 
 [DebugWindow/results]
 Geometry=[47,0,210,210]
@@ -1460,13 +1459,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:659.2"
-Fold[1]=[174,193,199,207,237,249,258,266,269,272,276,291,303,315,337,349,367,434,455,470,485,521,565,607,659,899,910,923,938,954,980,993,1004]
+File[1]=".src/0_Moduli/Global.module:118.0"
+Fold[1]=[183,202,208,216,246,258,267,275,278,281,285,300,312,324,346,358,376,443,464,479,494,530,574,616,668,908,919,932,947,963,989,1002,1013]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1523.0"
+File[4]=".src/Form/FMain.class:10437.21"
 File[5]=".src/Classi/SettingsClass.class:424.0"
-File[6]="CHANGELOG_GIT:3.10"
+Active=6
+File[6]="CHANGELOG_GIT:17.84"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:559.3"
@@ -1477,12 +1477,12 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:318.9"
+File[17]=".src/Classi/MplayerClass.class:58.0"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
 File[21]=".src/Form/GeneralOptions.class:735.37"
-File[22]=".src/Form/CoverManager.class:11.0"
+File[22]=".src/Form/CoverManager.class:68.92"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
 File[25]=".src/Form/CoverManager.form"
@@ -1510,12 +1510,12 @@ File[46]=".src/Form/OverlayTrayTip.class:18.0"
 File[47]=".src/Form/OpenSubtitesForm.class:93.0"
 File[48]=".src/Form/HotKeys.form"
 File[49]=".src/Form/HotKeys.class:233.57"
-Active=50
 File[50]=".src/Form/FormLyrics.form"
-File[51]=".src/Form/FormLyrics.class:251.6"
+File[51]=".src/Form/FormLyrics.class:27.21"
 File[52]=".src/Classi/WgetClass.class:87.0"
 File[53]=".src/Form/AudioVideoCodecs.form"
-Count=53
+File[54]="AA_ToDo:523.23"
+Count=54
 
 [Watches]
 Count=16
