--- a/.settings
+++ b/.settings
@@ -1459,14 +1459,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/0_Moduli/Global.module:118.0"
-Fold[1]=[183,202,208,216,246,258,267,275,278,281,285,300,312,324,346,358,376,443,464,479,494,530,574,616,668,908,919,932,947,963,989,1002,1013]
+File[1]=".src/0_Moduli/Global.module:517.19"
+Fold[1]=[183,202,208,216,246,258,267,275,278,281,285,300,312,324,346,358,376,464,530,574,616,668,918,929,942,957,989,999,1012]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:10437.21"
-File[5]=".src/Classi/SettingsClass.class:424.0"
+File[5]=".src/Classi/SettingsClass.class:93.45"
 Active=6
-File[6]="CHANGELOG_GIT:17.84"
+File[6]="CHANGELOG_GIT:5.98"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:559.3"
@@ -1496,12 +1496,12 @@ File[32]=".src/Form/MyQuestion.class:107.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
 File[35]=".src/Form/AFiltersCfg.form"
-File[36]=".src/Form/AFiltersCfg.class:353.23"
+File[36]=".src/Form/AFiltersCfg.class:58.30"
 File[37]=".src/Form/ladspahelper.class:204.32"
 File[38]=".src/Form/LogWindow.class:0.0"
 File[39]=".src/Form/Chains.form"
 File[40]=".src/Classi/mpris.class:131.20"
-File[41]=".src/Form/Chains.class:258.37"
+File[41]=".src/Form/Chains.class:399.4"
 File[42]=".src/0_Moduli/MyDialog.class:31.18"
 File[43]=".src/Form/ButtonMenu.form"
 File[44]=".src/Classi/FloatSpinBox.class:166.30"
@@ -1515,7 +1515,11 @@ File[51]=".src/Form/FormLyrics.class:27.21"
 File[52]=".src/Classi/WgetClass.class:87.0"
 File[53]=".src/Form/AudioVideoCodecs.form"
 File[54]="AA_ToDo:523.23"
-Count=54
+File[55]=".src/Form/MyAskName.class:37.0"
+File[56]=".src/Form/MyAskName.form"
+File[57]=".src/Form/VFiltersCfg.class:93.31"
+File[58]=".src/Form/VFiltersCfg.form"
+Count=58
 
 [Watches]
 Count=16
