Image viewing capabilities interfree with subtitles preview

--- a/.settings
+++ b/.settings
@@ -1468,8 +1468,7 @@ File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:5554.2"
 File[5]=".src/Classi/SettingsClass.class:93.45"
-Active=6
-File[6]="CHANGELOG_GIT:8.46"
+File[6]="CHANGELOG_GIT:3.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1370.3"
@@ -1522,7 +1521,9 @@ File[55]=".src/Form/MyAskName.class:37.0"
 File[56]=".src/Form/MyAskName.form"
 File[57]=".src/Form/VFiltersCfg.class:93.31"
 File[58]=".src/Form/VFiltersCfg.form"
-Count=58
+Active=59
+File[59]=".src/Form/XConfigureVideoDriver.form"
+Count=59
 
 [Watches]
 Count=16
