Removed the icon path from .desktop file (10x symbianflo)

--- a/xt7-player.desktop
+++ b/xt7-player.desktop
@@ -5,7 +5,7 @@ Comment[pt_BR]=Reprodutor de mÃ­dia
 Comment[it_IT]=Una gui quasi completa per mplayer
 Comment[ru]=Графический интерфейс к MPlayer
 Exec=xt7-player.gambas
-Icon=/usr/share/pixmaps/xt7-player.png
+Icon=xt7-player.png
 Terminal=false
 Type=Application
 StartupNotify=true
