--- a/.settings
+++ b/.settings
@@ -1468,7 +1468,8 @@ File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:5554.2"
 File[5]=".src/Classi/SettingsClass.class:93.45"
-File[6]="CHANGELOG_GIT:3.10"
+Active=6
+File[6]="CHANGELOG_GIT:12.0"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1370.3"
@@ -1479,7 +1480,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:58.0"
+File[17]=".src/Classi/MplayerClass.class:763.4"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1507,7 +1508,7 @@ File[41]=".src/Form/Chains.class:399.4"
 File[42]=".src/0_Moduli/MyDialog.class:31.18"
 File[43]=".src/Form/ButtonMenu.form"
 File[44]=".src/Classi/FloatSpinBox.class:12.17"
-File[45]=".src/Form/SubAndOsd.class:62.0"
+File[45]=".src/Form/SubAndOsd.class:200.24"
 File[46]=".src/Form/OverlayTrayTip.class:18.0"
 File[47]=".src/Form/OpenSubtitesForm.class:93.0"
 File[48]=".src/Form/HotKeys.form"
@@ -1521,9 +1522,9 @@ File[55]=".src/Form/MyAskName.class:37.0"
 File[56]=".src/Form/MyAskName.form"
 File[57]=".src/Form/VFiltersCfg.class:93.31"
 File[58]=".src/Form/VFiltersCfg.form"
-Active=59
 File[59]=".src/Form/XConfigureVideoDriver.form"
-Count=59
+File[60]=".src/Form/SubAndOsd.form"
+Count=60
 
 [Watches]
 Count=16
