--- a/.settings
+++ b/.settings
@@ -1468,8 +1468,7 @@ File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:5554.2"
 File[5]=".src/Classi/SettingsClass.class:93.45"
-Active=6
-File[6]="CHANGELOG_GIT:12.0"
+File[6]="CHANGELOG_GIT:3.65"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1370.3"
@@ -1494,7 +1493,7 @@ File[27]=".src/Form/AudioForm.class:155.30"
 File[28]=".src/Form/FsForm.form"
 File[29]=".src/Form/zzzFake.class:120.25"
 File[30]=".src/Classi/Meters.class:61.19"
-File[31]="xt7-player.desktop:12.20"
+File[31]="xt7-player.desktop:7.5"
 File[32]=".src/Form/MyQuestion.class:107.3"
 File[33]=".src/Form/MyQuestion.form"
 File[34]=".src/Form/ladspahelper.form"
@@ -1524,7 +1523,9 @@ File[57]=".src/Form/VFiltersCfg.class:93.31"
 File[58]=".src/Form/VFiltersCfg.form"
 File[59]=".src/Form/XConfigureVideoDriver.form"
 File[60]=".src/Form/SubAndOsd.form"
-Count=60
+Active=61
+File[61]="xt7-player.png"
+Count=61
 
 [Watches]
 Count=16
