--- a/.settings
+++ b/.settings
@@ -1468,7 +1468,8 @@ File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:5554.2"
 File[5]=".src/Classi/SettingsClass.class:93.45"
-File[6]="CHANGELOG_GIT:3.65"
+Active=6
+File[6]="CHANGELOG_GIT:3.7"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1370.3"
@@ -1479,7 +1480,7 @@ File[13]=".src/Form/DVBTuner.form"
 File[14]=".src/Form/OpenSubtitesForm.form"
 File[15]=".src/Form/RealtimeForm.form"
 File[16]=".src/Form/Searchfields.form"
-File[17]=".src/Classi/MplayerClass.class:763.4"
+File[17]=".src/Classi/MplayerClass.class:51.77"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
@@ -1523,9 +1524,9 @@ File[57]=".src/Form/VFiltersCfg.class:93.31"
 File[58]=".src/Form/VFiltersCfg.form"
 File[59]=".src/Form/XConfigureVideoDriver.form"
 File[60]=".src/Form/SubAndOsd.form"
-Active=61
 File[61]="xt7-player.png"
-Count=61
+File[62]=".src/Form/AudioVideoCodecs.class:0.0"
+Count=62
 
 [Watches]
 Count=16
