--- a/.settings
+++ b/.settings
@@ -2,7 +2,8 @@
 Count=0
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="myobj"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -1115,7 +1116,7 @@ Geometry=[0,41,344,344]
 Geometry=[47,0,210,210]
 
 [DebugWindow/myobj]
-Geometry=[0,0,344,344]
+Geometry=[1549,535,953,571]
 
 [DebugWindow/mypicture]
 Geometry=[510,330,344,344]
@@ -1299,7 +1300,7 @@ Geometry=[42,95,210,210]
 Geometry=[1280,0,210,210]
 
 [DebugWindow/settings]
-Geometry=[0,0,210,210]
+Geometry=[45,0,210,210]
 
 [DebugWindow/shadelowpicture]
 Geometry=[1280,0,210,210]
@@ -1344,7 +1345,7 @@ Geometry=[0,326,242,262]
 Geometry=[0,0,210,210]
 
 [DebugWindow/subsettings]
-Geometry=[0,0,210,210]
+Geometry=[45,0,210,210]
 
 [DebugWindow/subtitletracks]
 Geometry=[48,-4,210,210]
@@ -1354,6 +1355,9 @@ Geometry=[1505,409,795,340]
 
 [DebugWindow/tabstrip1]
 Geometry=[-4,-3,210,210]
+
+[DebugWindow/theSettings]
+Geometry=[45,461,308,552]
 
 [DebugWindow/theform.Controls]
 Geometry=[-4,-3,210,655]
@@ -1466,10 +1470,10 @@ File[1]=".src/0_Moduli/Global.module:517.19"
 Fold[1]=[183,202,208,216,246,258,267,275,278,281,285,300,312,324,346,358,376,464,530,574,616,668,918,929,942,957,989,999,1012]
 File[2]=".src/Classi/StartClass.class:20.15"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:5554.2"
-File[5]=".src/Classi/SettingsClass.class:93.45"
+File[4]=".src/Form/FMain.class:5565.8"
+File[5]=".src/Classi/SettingsClass.class:640.0"
 Active=6
-File[6]="CHANGELOG_GIT:3.7"
+File[6]="CHANGELOG_GIT:4.10"
 File[7]=".src/Classi/ShoutCastClass.class:0.0"
 File[8]=".src/Classi/OpenSubtitlesAPI.class:0.0"
 File[9]=".src/Classi/PlaylistClass.class:1370.3"
@@ -1484,7 +1488,7 @@ File[17]=".src/Classi/MplayerClass.class:51.77"
 File[18]=".src/Form/ProfileManager.class:37.12"
 File[19]=".src/Form/AskName.class:17.14"
 File[20]=".src/Form/GeneralOptions.form"
-File[21]=".src/Form/GeneralOptions.class:735.37"
+File[21]=".src/Form/GeneralOptions.class:1115.0"
 File[22]=".src/Form/CoverManager.class:396.51"
 File[23]=".src/Form/EpgForm.class:604.24"
 File[24]=".src/Classi/AlbumView.class:252.31"
@@ -1526,7 +1530,8 @@ File[59]=".src/Form/XConfigureVideoDriver.form"
 File[60]=".src/Form/SubAndOsd.form"
 File[61]="xt7-player.png"
 File[62]=".src/Form/AudioVideoCodecs.class:0.0"
-Count=62
+File[63]=".src/Form/XConfigureVideoDriver.class:318.0"
+Count=63
 
 [Watches]
 Count=16
